--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,1 +1,5 @@
 <h1>{{screamIt title}}</h1>
+
+<p><a href="/">Home</a></p>
+<p><a href="/about">About</a></p>
+<p><a href="/projects">Projects</a></p>
